Fix #18331 - [Feature] add option excludePublishedEntities in channel query

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -46,9 +46,9 @@ beCPG.product.report.showDeprecatedXml.description             = Affiche les GDA
 beCPG.product.searchTemplate.description                       = Permet de d\u00E9finir le mod\u00E8le de recherche des produits par d\u00E9faut utilis\u00E9 par Alfresco
 beCPG.project.name.format.description                          = Permet de d\u00E9finir le format d'affichage du nom des projets
 beCPG.quality.sampleId.format.description                      = Permet de d\u00E9finir le format du nom des \u00E9chantillons des ordres de fabrication
-beCPG.remote.rateLimiter.capacity.description                  = Nombre de requ\u00EAtes simultan\u00E9es autoris\u00E9es dans l'API distante.
+beCPG.remote.rateLimiter.capacity.description                  = Nombre de requ\u00EAtes simultan\u00E9es autoris\u00E9es dans l'API.
 beCPG.remote.rateLimiter.capacity.type                         = Integer
-beCPG.remote.rateLimiter.refillRate.description                = Taux de recharge du seau de jetons pour le limiteur de d\u00E9bit de l'API distante.
+beCPG.remote.rateLimiter.refillRate.description                = Taux de recharge des jetons pour le limiteur de d\u00E9bit de l'API (jetons/ms).
 beCPG.remote.rateLimiter.refillRate.type                       = Double
 beCPG.report.datasource.maxSizeInBytes.description             = Permet de d\u00E9finir la taille (en octets) de la datasource de rapport \u00E0 partir de laquelle le syst\u00E8me l\u00E8ve une exigence non respect\u00E9e
 beCPG.report.image.maxSizeInBytes.description                  = Permet de d\u00E9finir la taille (en octets) des images de rapport \u00E0 partir de laquelle le syst\u00E8me l\u00E8ve une exigence non respect\u00E9e
