Fix #22267 - [Feature] Added "(administration)" to material list and ing type

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -542,7 +542,7 @@ bcpg_bcpgmodel.type.bcpg_ingList.title                                    = Ingr
 bcpg_bcpgmodel.type.bcpg_ingRegulatoryList.description                    = Ingredients regulatory compliance list
 bcpg_bcpgmodel.type.bcpg_ingRegulatoryList.title                          = Ingredients compliance 
 bcpg_bcpgmodel.type.bcpg_ingType.title                                    = Ingredient type
-bcpg_bcpgmodel.type.bcpg_ingTypeItem.description                          = Types of ingredients
+bcpg_bcpgmodel.type.bcpg_ingTypeItem.description                          = Types of ingredients (administration)
 bcpg_bcpgmodel.type.bcpg_ingTypeItem.title                                = Ingredient type
 bcpg_bcpgmodel.type.bcpg_labelClaim.description                           = Claim (administration)
 bcpg_bcpgmodel.type.bcpg_labelClaim.title                                 = Claim
