--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -542,7 +542,7 @@ bcpg_bcpgmodel.type.bcpg_ingList.title                                    = Ingr
 bcpg_bcpgmodel.type.bcpg_ingRegulatoryList.description                    = Liste de conformit\u00E9 r\u00E9glementaire des ingr\u00E9dients
 bcpg_bcpgmodel.type.bcpg_ingRegulatoryList.title                          = Conformit\u00E9 des ingr\u00E9dients
 bcpg_bcpgmodel.type.bcpg_ingType.title                                    = Type d'ingr\u00E9dient
-bcpg_bcpgmodel.type.bcpg_ingTypeItem.description                          = Permet de saisir les types d'ingr\u00E9dients
+bcpg_bcpgmodel.type.bcpg_ingTypeItem.description                          = Permet de saisir les types d'ingr\u00E9dients (administration)
 bcpg_bcpgmodel.type.bcpg_ingTypeItem.title                                = Type d'ingr\u00E9dient
 bcpg_bcpgmodel.type.bcpg_labelClaim.description                           = All\u00E9gation (administration)
 bcpg_bcpgmodel.type.bcpg_labelClaim.title                                 = All\u00E9gation
