--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/packModel_fr.properties
@@ -60,7 +60,7 @@ pack_packmodel.type.pack_labelingList.description              = Sp\u00E9cificat
 pack_packmodel.type.pack_labelingList.title                    = Mentions
 pack_packmodel.type.pack_labelingTemplate.description          = Liste des patrons de marquage
 pack_packmodel.type.pack_labelingTemplate.title                = Patron de marquage
-pack_packmodel.type.pack_packMaterial.description              = Mat\u00E9riaux
+pack_packmodel.type.pack_packMaterial.description              = Mat\u00E9riaux (administration)
 pack_packmodel.type.pack_packMaterial.title                    = Mat\u00E9riaux
 pack_packmodel.type.pack_packMaterialList.description          = Liste des mat\u00E9riaux d'emballages
 pack_packmodel.type.pack_packMaterialList.title                = Mat\u00E9riaux
