Fix #21240 - [Feature] certificationCode field

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -76,6 +76,7 @@ gs1_gs1Model.property.gs1_cancelledDateTime.title                               
 gs1_gs1Model.property.gs1_catalogId.title                                                 = Identifiant Catalogue
 gs1_gs1Model.property.gs1_catchAreaCode.title                                             = Zone de capture
 gs1_gs1Model.property.gs1_catchMethodCode.title                                           = M\u00E9thode de capture
+gs1_gs1Model.property.gs1_certificationCode.title                                         = Code de certification
 gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.description                   = Une fa\u00E7on descriptive de sp\u00E9cifier une p\u00E9riode de temps, car certains fromages sont matur\u00E9s sur une p\u00E9riode de temps plut\u00F4t qu'une dur\u00E9e exacte. Par exemple, 3 \u00E0 4 semaines, plus d'un an, etc. Le terme "maturation" est \u00E9galement connu dans d'autres march\u00E9s sous le nom "vieilli".
 gs1_gs1Model.property.gs1_cheeseMaturationPeriodDescription.title                         = Description de la p\u00E9riode de maturation du fromage
 gs1_gs1Model.property.gs1_cheeseMaturationProcessContainerTypeCode.description            = Le type de conteneur dans lequel la maturation du fromage se produit. Le conteneur influence directement la saveur du fromage. Le terme "maturation" est \u00E9galement connu dans d'autres march\u00E9s sous le nom "vieilli".
