--- a/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/templates/webscripts/fr/becpg/olap/olapSchema_4_0.get_fr.properties
@@ -79,6 +79,7 @@ jsolap.day.title                         = Jour
 jsolap.delay.title                       = Retard
 jsolap.designation.title                 = Produit
 jsolap.dueDate.title                     = Date d'\u00E9ch\u00E9ance
+jsolap.ecoScore.title					 = EcoScore
 jsolap.effectivityEnd.title              = Fin d'effectivit\u00E9
 jsolap.effectivityStart.title            = D\u00E9but d'effectivit\u00E9
 jsolap.endDate.title                     = Date de fin
@@ -115,6 +116,14 @@ jsolap.labelClaim.caption                = Toutes les all\u00E9gations
 jsolap.labelClaim.title                  = All\u00E9gation
 jsolap.lastHttpRespTime.title            = Dernier temps de r\u00E9ponse HTTP (ms)
 jsolap.lastProgress.title                = Dernier avancement
+jsolap.lca.caption						 = Toutes les analyses du cycle de vie
+jsolap.lca.title						 = Analyse du cycle de vie
+jsolap.lcaFutureValue.title				 = Valeur d'ACV N+1
+jsolap.lcaPerGroup.title				 = Groupe d'analyse du cycle de vie
+jsolap.lcaPreviousValue.title			 = Valeur d'ACV N-1
+jsolap.lcaScore.caption					 = Tous les scores ACV
+jsolap.lcaScore.title					 = Score ACV
+jsolap.lcaValue.title					 = Valeur d'ACV
 jsolap.legalName.title                   = Nom l\u00E9gal
 jsolap.loggedTime.caption                = Tous les temps pass\u00E9s
 jsolap.loggedTime.title                  = Temps pass\u00E9
