Fix #21046 - [Feature] Add regulatory usages and countries to product specification lists

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -88,7 +88,7 @@ bcpg_bcpgmodel.association.bcpg_lcaListLca.title                          = LCA
 bcpg_bcpgmodel.association.bcpg_lclCertification.title                    = Certification
 bcpg_bcpgmodel.association.bcpg_lclLabelClaim.title                       = Claim
 bcpg_bcpgmodel.association.bcpg_lclMissingLabelClaims.title               = Not claimed by
-bcpg_bcpgmodel.association.bcpg_limitingIngredient.title                  = Limiting ingredient
+bcpg_bcpgmodel.association.bcpg_limitingIngredient.title                  = Limiting elements
 bcpg_bcpgmodel.association.bcpg_lrComponents.description                  = Components
 bcpg_bcpgmodel.association.bcpg_lrComponents.title                        = Components
 bcpg_bcpgmodel.association.bcpg_lrReplacements.description                = Replacements
