--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -88,7 +88,7 @@ bcpg_bcpgmodel.association.bcpg_lcaListLca.title                          = ACV
 bcpg_bcpgmodel.association.bcpg_lclCertification.title                    = Certification
 bcpg_bcpgmodel.association.bcpg_lclLabelClaim.title                       = All\u00E9gation
 bcpg_bcpgmodel.association.bcpg_lclMissingLabelClaims.title               = Non revendiqu\u00E9 par
-bcpg_bcpgmodel.association.bcpg_limitingIngredient.title                  = Ingr\u00E9dient limitant
+bcpg_bcpgmodel.association.bcpg_limitingIngredient.title                  = El\u00E9ments limitants
 bcpg_bcpgmodel.association.bcpg_lrComponents.description                  = Composants
 bcpg_bcpgmodel.association.bcpg_lrComponents.title                        = Composants
 bcpg_bcpgmodel.association.bcpg_lrReplacements.description                = Remplacements
