Fix #21401 - [Feature] Add evaporation rate in labeling

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -39,8 +39,8 @@ bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                               = Subs
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.description               = Produit transform\u00E9
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.title                     = Produit transform\u00E9
 bcpg_bcpgmodel.aspect.bcpg_undeletableAspect.description                  = Non supprimable
-bcpg_bcpgmodel.aspect.bcpg_waterAspect.description                        = Aspect \u00E9vaporable 
-bcpg_bcpgmodel.aspect.bcpg_waterAspect.title                              = Aspect \u00E9vaporable
+bcpg_bcpgmodel.aspect.bcpg_evaporableAspect.description                        = Aspect \u00E9vaporable 
+bcpg_bcpgmodel.aspect.bcpg_evaporableAspect.title                              = Aspect \u00E9vaporable
 bcpg_bcpgmodel.association.bcpg_advAlInVolAnd.title                       = Allerg\u00E8nes pr\u00E9sents fortuitement
 bcpg_bcpgmodel.association.bcpg_advAlInVolNot.title                       = Allerg\u00E8nes non pr\u00E9sents fortuitement
 bcpg_bcpgmodel.association.bcpg_advAlVolAnd.title                         = Allerg\u00E8nes pr\u00E9sents volontairement
