--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-plm-model_fr.properties
@@ -14,7 +14,7 @@ aspect.bcpg_regulatoryAspect             = Aspect conformit\u00E9
 aspect.bcpg_regulatoryCodeAspect         = Aspect code r\u00E8glementaire
 aspect.bcpg_suppliersAspect              = Fournisseur
 aspect.bcpg_undeletableAspect            = Non supprimable
-aspect.bcpg_waterAspect                  = \u00C9vaporable
+aspect.bcpg_evaporableAspect                  = \u00C9vaporable
 aspect.ghs_sdsAspect                     = MSDS Aspect
 aspect.gs1_alcoholInformationAspect      = Aspect boisson alcoolis\u00E9e
 aspect.gs1_animalFeedingAspect           = Alimentation des animaux
