Fix #15790 - [Feature] Improve license management

--- a/becpg-plm/becpg-plm-share/src/main/assembly/web/js/aikau/becpg/header/i18n/WarningBar.properties
+++ b/becpg-plm/becpg-plm-share/src/main/assembly/web/js/aikau/becpg/header/i18n/WarningBar.properties
@@ -1,4 +1,9 @@
-ecm.warning.bar.message=All your modifications will be recorded under
-ecm.warning.bar.stop.recording=Stop recording
+
+ecm.warning.bar.message        = All your modifications will be recorded under
+ecm.warning.bar.stop.recording = Stop recording
+
+floatingLicensesExceeded.warning.bar.message = Exceeded floating licenses
+
+nolicense.warning.bar.message = No license file or number of named licenses exceeded
+
 unauthorized.warning.bar.message = User is not part of a license group
-nolicense.warning.bar.message = No license file is installed on the system
