--- a/becpg-plm/becpg-plm-share/src/main/assembly/web/js/aikau/becpg/header/i18n/WarningBar_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/assembly/web/js/aikau/becpg/header/i18n/WarningBar_fr.properties
@@ -1,4 +1,9 @@
+
 ecm.warning.bar.message        = Vos modifications sont enregistr\u00E9es sous
 ecm.warning.bar.stop.recording = Arr\u00EAter le suivi
+
+floatingLicensesExceeded.warning.bar.message = Nombre de licenses flottantes d\u00E9pass\u00E9
+
+nolicense.warning.bar.message = Aucun fichier de licence ou nombre de licences nomm\u00E9es d\u00E9pass\u00E9
+
 unauthorized.warning.bar.message = L'utilisateur ne fait pas partie d'un groupe de licence
-nolicense.warning.bar.message = Aucun fichier de licence n'est install\u00E9 sur le syst\u00e8me
