--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get_fr.properties
@@ -6,32 +6,37 @@ button.reload-model  = Ex\u00E9cuter
 button.show-batches  = Voir
 button.show-users    = Voir
 
-label.batchCounts         = T\u00E2ches en cours:
-label.becpgSchema         = Sch\u00E9ma beCPG:
-label.characts            = Caract\u00E9ristiques syst\u00E8me
-label.characts.edit       = Editer les:
-label.connectedUsers      = Utilisateurs connect\u00E9s:
-label.diskPerc            = Disque (%):
-label.empty-cache         = les caches beCPG
-label.freeMemory          = M\u00E9moire disponible:
-label.informations        = Informations syst\u00E8me
-label.init-repo           = l'initialisation de l'entrep\u00F4t
-label.maxMemory           = M\u00E9moire max:
-label.memory              = M\u00E9moire
-label.nonHeapMemory       = M\u00E9moire JVM (Non-Heap):
-label.reload-config       = le rechargement des formulaires
-label.reload-model        = le rechargement des mod\u00E8les
+label.batchCounts             = T\u00E2ches en cours:
+label.becpgSchema             = Sch\u00E9ma beCPG:
+label.characts                = Caract\u00E9ristiques syst\u00E8me
+label.characts.edit           = Editer les:
+label.concurrentReadUsers     = Licences flottantes en consultation:
+label.concurrentSupplierUsers = Licences flottantes fournisseur:
+label.concurrentWriteUsers    = Licences flottantes en \u00E9dition:
+label.connectedUsers          = Utilisateurs connect\u00E9s:
+label.diskPerc                = Disque (%):
+label.empty-cache             = les caches beCPG
+label.freeMemory              = M\u00E9moire disponible:
+label.informations            = Informations syst\u00E8me
+label.init-repo               = l'initialisation de l'entrep\u00F4t
+label.maxMemory               = M\u00E9moire max:
+label.memory                  = M\u00E9moire
+label.namedReadUsers          = Licences nomm\u00E9es en consultation:
+label.namedWriteUsers         = Licences nomm\u00E9es en \u00E9dition:
+label.nonHeapMemory           = M\u00E9moire JVM (Non-Heap):
+label.reload-config           = le rechargement des formulaires
+label.reload-model            = le rechargement des mod\u00E8les
 #Form labels
-label.repository          = R\u00E9f\u00E9rentiel
-label.show-batches        = les t\u00E2ches en cours
-label.show-users          = les utilisateurs connect\u00E9s
-label.systemFolder.access = Acc\u00E9der aux:
-label.systemFolders       = Dossiers syst\u00E8me
-label.task.current        = T\u00E2che en cours:
-label.task.pending        = T\u00E2ches en attente:
-label.title-form          = Administration beCPG
-label.totalMemory         = M\u00E9moire allou\u00E9e:
-label.withoutLicenseUsers = Utilisateurs sans licences
+label.repository              = R\u00E9f\u00E9rentiel
+label.show-batches            = les t\u00E2ches en cours
+label.show-users              = les utilisateurs connect\u00E9s
+label.systemFolder.access     = Acc\u00E9der aux:
+label.systemFolders           = Dossiers syst\u00E8me
+label.task.current            = T\u00E2che en cours:
+label.task.pending            = T\u00E2ches en attente:
+label.title-form              = Administration beCPG
+label.totalMemory             = M\u00E9moire allou\u00E9e:
+label.withoutLicenseUsers     = Utilisateurs sans licences
 
 message.batch.cancel          = Annuler la t\u00E2che
 message.empty-cache.failure   = Impossible de vider les caches
