Fix #21240 - [Feature] Shortened some GS1 fields titles

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -35,10 +35,10 @@ gs1_gs1Model.association.gs1_targetMarketCountries.description                  
 gs1_gs1Model.association.gs1_targetMarketCountries.title                                  = Pays
 gs1_gs1Model.association.gs1_targetMarkets.description                                    = Un ensemble de march\u00E9s cibles pour le produit
 gs1_gs1Model.association.gs1_targetMarkets.title                                          = March\u00E9s cibles
-gs1_gs1Model.property.gs1_additionalTradeItemClassification1.title                        = Classification suppl\u00E9mentaire de l'article commercial
-gs1_gs1Model.property.gs1_additionalTradeItemClassification2.title                        = Classification suppl\u00E9mentaire de l'article commercial 2
-gs1_gs1Model.property.gs1_additionalTradeItemClassificationText1.title                    = Description de la classification suppl\u00E9mentaire de l'article commercial
-gs1_gs1Model.property.gs1_additionalTradeItemClassificationText2.title                    = Description de la classification suppl\u00E9mentaire de l'article commercial 2
+gs1_gs1Model.property.gs1_additionalTradeItemClassification1.title                        = Classification de l'article commercial
+gs1_gs1Model.property.gs1_additionalTradeItemClassification2.title                        = Classification de l'article commercial 2
+gs1_gs1Model.property.gs1_additionalTradeItemClassificationText1.title                    = Description de la classification de l'article commercial
+gs1_gs1Model.property.gs1_additionalTradeItemClassificationText2.title                    = Description de la classification de l'article commercial 2
 gs1_gs1Model.property.gs1_alcoholBeverageAge.description                                  = La p\u00E9riode pendant laquelle le produit alcoolis\u00E9 a vieilli. Par exemple, un whisky \u00E2g\u00E9 de 12 ans
 gs1_gs1Model.property.gs1_alcoholBeverageAge.title                                        = \u00C2ge de la boisson alcoolis\u00E9e (M)
 gs1_gs1Model.property.gs1_alcoholBeverageDistilledFromCode.description                    = Le ou les principaux ingr\u00E9dients \u00E0 partir desquels le produit alcoolis\u00E9 est \u00E9t\u00E9 distill\u00E9e. Exemple : Seigle, Pomme de terre, Canne \u00E0 sucre.
@@ -61,9 +61,9 @@ gs1_gs1Model.property.gs1_alcoholicBeverageSugarContent.description             
 gs1_gs1Model.property.gs1_alcoholicBeverageSugarContent.title                             = Teneur en sucre de la boisson alcoolis\u00E9e (g/L)
 gs1_gs1Model.property.gs1_alcoholicPermissionLevel.description                            = Indication d'un niveau d'autorisation pour les produits alcoolis\u00E9s en fonction de la classification du produit.
 gs1_gs1Model.property.gs1_alcoholicPermissionLevel.title                                  = Licence de d\u00E9bit de boissons n\u00E9cessaire
-gs1_gs1Model.property.gs1_animalFeedAdditiveStatement.title                               = D\u00E9claration des additifs pour l'alimentation animale
-gs1_gs1Model.property.gs1_animalFeedAnalyticalConstituentsStatement.title                 = D\u00E9claration des constituants analytiques pour l'alimentation animale
-gs1_gs1Model.property.gs1_animalFeedCompositionStatement.title                            = D\u00E9claration sur la composition des aliments pour animaux
+gs1_gs1Model.property.gs1_animalFeedAdditiveStatement.title                               = Additifs pour l'alimentation animale
+gs1_gs1Model.property.gs1_animalFeedAnalyticalConstituentsStatement.title                 = Constituants analytiques pour l'alimentation animale
+gs1_gs1Model.property.gs1_animalFeedCompositionStatement.title                            = Composition des aliments pour animaux
 gs1_gs1Model.property.gs1_animalFeedingInstructions.title                                 = Instructions pour l'alimentation des animaux
 gs1_gs1Model.property.gs1_animalFeedType.title                                            = Type d'alimentation des animaux
 gs1_gs1Model.property.gs1_animalNutritionalClaim.title                                    = All\u00E9gation nutritionnelle pour les animaux
