--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get_fr.properties
@@ -1,15 +1,16 @@
 
-button.empty-cache   = Vider
-button.init-repo     = Ex\u00E9cuter
-button.reload-config = Ex\u00E9cuter
-button.reload-model  = Ex\u00E9cuter
-button.show-batches  = Voir
-button.show-users    = Voir
+button.clean-config = Nettoyer
+button.empty-cache  = Vider
+button.init-repo    = Ex\u00E9cuter
+button.reload-model = Ex\u00E9cuter
+button.show-batches = Voir
+button.show-users   = Voir
 
 label.batchCounts             = T\u00E2ches en cours:
 label.becpgSchema             = Sch\u00E9ma beCPG:
 label.characts                = Caract\u00E9ristiques syst\u00E8me
 label.characts.edit           = Editer les:
+label.clean-config            = les formulaires
 label.concurrentReadUsers     = Licences flottantes en consultation:
 label.concurrentSupplierUsers = Licences flottantes fournisseur:
 label.concurrentWriteUsers    = Licences flottantes en \u00E9dition:
@@ -38,15 +39,15 @@ label.title-form              = Administration beCPG
 label.totalMemory             = M\u00E9moire allou\u00E9e:
 label.withoutLicenseUsers     = Utilisateurs sans licences
 
-message.batch.cancel          = Annuler la t\u00E2che
-message.empty-cache.failure   = Impossible de vider les caches
-message.empty-cache.success   = Caches vid\u00E9s avec succ\u00E9s
-message.init-repo.failure     = Echec lors de l'initialisation de l'entrep\u00F4t
-message.init-repo.success     = Entrep\u00F4t initialis\u00E9
-message.reload-config.failure = Echec lors du rechargement de la configuration
-message.reload-config.success = Configuration recharg\u00E9
-message.reload-model.failure  = Echec lors du rechargement du mod\u00E8le
+message.batch.cancel         = Annuler la t\u00E2che
+message.clean-config.failure = Echec lors du nettoyage de la configuration
+message.clean-config.success = Configuration nettoy\u00E9e
+message.empty-cache.failure  = Impossible de vider les caches
+message.empty-cache.success  = Caches vid\u00E9s avec succ\u00E9s
+message.init-repo.failure    = Echec lors de l'initialisation de l'entrep\u00F4t
+message.init-repo.success    = Entrep\u00F4t initialis\u00E9
+message.reload-model.failure = Echec lors du rechargement du mod\u00E8le
 #Confirmation messages
-message.reload-model.success  = Mod\u00E8le recharg\u00E9
-message.sortasc               = Cliquez pour trier par ordre croissant
-message.sortdesc              = Cliquez pour trier par ordre d\u00E9croissant
+message.reload-model.success = Mod\u00E8le recharg\u00E9
+message.sortasc              = Cliquez pour trier par ordre croissant
+message.sortdesc             = Cliquez pour trier par ordre d\u00E9croissant
